# map-metrics

./: .gitignore  .travis.yml  AUTHORS.md  AUTHORS.rst  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  __init__.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md  style.yml  tests.yml
.github/workflows/: linux_wheel  linux_wheel.yml  osx_wheel  style.yml  tests_cpp.yml  wheels  wheels.yml  windows_wheel
cpp/: CMakeLists.txt  Draw.cpp  clustering.cpp  clustering.h  config.h  max_clique.cpp  max_clique.h  metrics.cpp  metrics.h  metrics_utils.cpp  metrics_utils.h  orth_extract.cpp  orth_extract.h
cpp/pybind/: CMakeLists.txt  metrics.cpp
cpp/tests/: CMakeLists.txt  main.cpp  parse_utils.cpp  parse_utils.h  pc_utils.cpp  pc_utils.h  test_base_metrics.cpp  test_depth.cpp  test_orthogonal.cpp  test_parse.cpp
cpp/tests/data/: 00.txt
cpp/tests/data/depth/pcs/: PC-0081.ply  PC-0091.ply  PC-0101.ply  PC-0111.ply  PC-0121.ply  PC-0131.ply  PC-0151.ply  PC-0161.ply  PC-0181.ply  PC-0191.ply  PC-0201.ply  PC-0211.ply  PC-0221.ply  PC-0231.ply  PC-0251.ply  PC-0271.ply  PC-0281.ply  PC-0291.ply  PC-0321.ply  PC-0341.ply
cpp/tests/data/depth/poses/: pose-0081.txt  pose-0151.txt  pose-0181.txt  pose-0191.txt  pose-0231.txt  pose-0281.txt  pose-0331.txt
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
map_metrics/: __init__.py  config.py  map_metrics.py  metrics.py
map_metrics/utils/: __init__.py  orthogonal.py
orth_extract_experiment/: b
python/: .pre-commit-config.yaml  requirements.txt
python/tests/: test_base_metrics.py
python/tests/data/depth/pcs/: PC-0071.ply  PC-0141.ply  PC-0171.ply  PC-0241.ply  PC-0261.ply  PC-0301.ply  PC-0311.ply  PC-0331.ply
python/tests/data/depth/points/: PC-0071.npy  PC-0081.npy  PC-0091.npy  PC-0101.npy  PC-0111.npy  PC-0121.npy  PC-0131.npy  PC-0141.npy  PC-0151.npy  PC-0161.npy  PC-0171.npy  PC-0181.npy  PC-0191.npy  PC-0201.npy  PC-0211.npy  PC-0221.npy  PC-0231.npy  PC-0241.npy  PC-0251.npy  PC-0261.npy  PC-0271.npy  PC-0281.npy  PC-0291.npy  PC-0301.npy  PC-0311.npy  PC-0321.npy  PC-0331.npy  PC-0341.npy
python/tests/data/depth/poses/: pose-0071.txt  pose-0091.txt  pose-0101.txt  pose-0131.txt  pose-0161.txt  pose-0221.txt  pose-0241.txt  pose-0251.txt  pose-0301.txt  pose-0321.txt  pose-0341.txt
scripts/: build-wheels-linux.sh  build-wheels-macOS.sh  build-wheels-windows.cmd
tests/: CMakeLists.txt  __init__.py  main.cpp  mpv.cpp  parse_utils.cpp  parse_utils.h  pc_utils.h  sample.cpp  test_base_metrics.cpp  test_config.py  test_map_metrics.py  test_metrics.py  test_mpv.cpp  test_orthogonal.py  test_parse.cpp  test_utils.h
tests/data/depth/: README.md
tests/data/depth/orth_subset/: orth-0091.npy
tests/data/depth/pcs/: PC-0071.pcd  PC-0081.pcd  PC-0091.pcd  PC-0101.pcd  PC-0111.pcd  PC-0121.pcd  PC-0131.pcd  PC-0141.pcd  PC-0151.pcd  PC-0161.pcd  PC-0171.pcd  PC-0181.pcd  PC-0191.pcd  PC-0201.pcd  PC-0211.pcd  PC-0221.pcd  PC-0231.pcd  PC-0241.pcd  PC-0251.pcd  PC-0261.pcd  PC-0271.pcd  PC-0281.pcd  PC-0291.pcd  PC-0301.pcd  PC-0311.pcd  PC-0321.pcd  PC-0331.pcd  PC-0341.pcd  PC-0351.pcd  PC-0361.pcd  PC-0371.pcd  PC-0381.pcd  PC-0391.pcd  PC-0401.pcd  PC-0411.pcd  PC-0421.pcd  PC-0431.pcd  PC-0441.pcd  PC-0451.pcd  PC-0461.pcd  (+433 more)
tests/data/depth/poses/: pose-0111.txt  pose-0121.txt  pose-0141.txt  pose-0171.txt  pose-0201.txt  pose-0211.txt  pose-0261.txt  pose-0271.txt  pose-0291.txt  pose-0311.txt  pose-0351.txt  pose-0361.txt  pose-0371.txt  pose-0381.txt  pose-0391.txt  pose-0401.txt  pose-0411.txt  pose-0421.txt  pose-0431.txt  pose-0441.txt  pose-0451.txt  pose-0461.txt  pose-0471.txt  pose-0486.txt  pose-0496.txt  pose-0506.txt  pose-0516.txt  pose-0526.txt  pose-0536.txt  pose-0546.txt  pose-0556.txt  pose-0566.txt  pose-0576.txt  pose-0586.txt  pose-0596.txt  pose-0606.txt  pose-0616.txt  pose-0626.txt  pose-0636.txt  pose-0646.txt  (+415 more)
tests/data/lidar/: README.md
tests/gtest/: CMakeLists.txt
